# TinyMath

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TinyColor.cpp  TinyColor.h  TinyPoint.cpp  TinyPoint.h  TinyVector  TinyVector.cpp  TinyVector.h  cmake_install.cmake  main.cpp
